syntax = "proto3";

option optimize_for = CODE_SIZE;

message CrdtMessageContent {
  string table = 1;
  string row = 2;
  string column = 3;
  oneof value {
    string stringValue = 4;
    int32 numberValue = 5;
  }
}

message EncryptedCrdtMessage {
  string timestamp = 1;
  bytes content = 2;
}

message SyncRequest {
  repeated EncryptedCrdtMessage messages = 1;
  string userId = 2;
  string nodeId = 3;
  string merkleTree = 4;
}

message SyncResponse {
  repeated EncryptedCrdtMessage messages = 1;
  string merkleTree = 2;
}